i didnt give to you

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-     <link href="https://fonts.googleapis.com/css2?family=Climate+Crisis&family=Montserrat:ital,wght@0,100;0,200;0,400;1,100;1,200;1,300;1,600;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Climate+Crisis&family=Montserrat:ital,wght@0,100;0,200;0,400;1,100;1,200;1,300;1,600;1,700&display=swap" rel="stylesheet">
     
     <title>Resume 4-Christopher Makombe-Group A</title>
 </head>
@@ -38,12 +38,17 @@
     </article>
           <section class="section-ed">
 
+
+    <div class="ed">
     <h2 id="education" style="font-size: 25px;">Education</h2>
     <h3 style="font-size: 20px; color:green"> Intro to Web at <a class="a" href="http://codespace.co.za/"> CodeSpace Academy</a></h3>
       <p>Very Insightful  </p>
       
       <h3 style="font-size: 20px;"> CS50 Course by Harvard</h3>
       <p>Wonderful course to introduce explain how computer works and computer networking.</p>
+      </div>
+
+    <div class="exp">
     <h2 id="experience" style="font-size: 25px;">Experience</h2>
         <h3  style="font-size: 20px;">Freelance Gig</h3>
         <ul>
@@ -65,6 +70,9 @@
           <li>Next Js</li>
           <li>React Native Expo </li>
       </ul>
+      </div>
+
+      <div clasName="foot">
     <footer>
       <h2 style="font-size: 25px;">Contact Details</h2>
         <p><a href="https://www.linkedin.com/in/christophermusamakombe/" target="_blank">LinkedIn</a></p>
@@ -73,6 +81,8 @@
       <h2 style="font-size: 25px;">Project Links</h2>
         <p><a href="    https://jovial-kitsune-573c91.netlify.app/" target="_blank">SwiftlyBox</a></p>
     </footer>
+    </div>
+
       </section>
       </article>
       </header>
